@@ -5,25 +5,30 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.demo</groupId>
-    <artifactId>webflux</artifactId>
+    <artifactId>spring</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>demo-rective</module>
-        <module>demo-client</module>
-        <module>tech-demo</module>
-        <module>akka-demo</module>
-        <module>proxy-demo</module>
+        <module>new-feature</module>
+        <module>kafka-tools</module>
+        <module>utils-demo</module>
+        <module>spring-task</module>
+        <module>demo-reactive</module>
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>3.5.0</version>
     </parent>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>24</java.version>
+        <skipTests>true</skipTests>
+        <maven.deploy.skip>true</maven.deploy.skip>
+        <grpc.version>1.72.0</grpc.version>
+        <protobuf-java.version>4.30.2</protobuf-java.version>
+        <spring-grpc.version>0.9.0</spring-grpc.version>
     </properties>
 
     <dependencies>
@@ -35,7 +40,16 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>--enable-preview
+                    </compilerArgs>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -43,5 +57,31 @@
         </plugins>
     </build>
 
+    <!--    <pluginRepositories>-->
+    <!--        <pluginRepository>-->
+    <!--            <id>spring-snapshots</id>-->
+    <!--            <url>https://repo.spring.io/snapshot</url>-->
+    <!--        </pluginRepository>-->
+    <!--        <pluginRepository>-->
+    <!--            <id>spring-milestones</id>-->
+    <!--            <url>https://repo.spring.io/milestone</url>-->
+    <!--        </pluginRepository>-->
+    <!--    </pluginRepositories>-->
 
+
+    <!--    <repositories>-->
+
+    <!--        <repository>-->
+    <!--            <id>spring-snapshots</id>-->
+    <!--            <url>https://repo.spring.io/snapshot</url>-->
+    <!--        </repository>-->
+    <!--        <repository>-->
+    <!--            <id>spring-milestones</id>-->
+    <!--            <url>https://repo.spring.io/milestone</url>-->
+    <!--        </repository>-->
+    <!--        <repository>-->
+    <!--            <id>central</id>-->
+    <!--            <url>https://repo1.maven.org/maven2/</url>-->
+    <!--        </repository>-->
+    <!--    </repositories>-->
 </project>
